tests/symlink/symlink.exp
Error --------------------------------------------------------------- qux.js:2:7

Error: qux.js:2
  2: ({ x: "" }: Foo);
           ^^ Cannot cast object literal to `Foo` because in property `x`, string [1] is incompatible with number [2].
  References:
    2: ({ x: "" }: Foo);
             ^^ [1]: string
    1: export type Foo = { x: number; }
                              ^^^^^^ [2]: number. See: foo.js:1


Found 1 error
